--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<nav class="bg-white border-gray-200 dark:bg-gray-900">
+<nav class="border-b-2 fixed top-0 w-full">
   <div
     class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
   >
@@ -27,7 +27,7 @@
         viewBox="0 0 17 14"
       >
         <path
-          stroke="currentColor"
+          stroke="white"
           stroke-linecap="round"
           stroke-linejoin="round"
           stroke-width="2"
@@ -35,23 +35,23 @@
       </svg>
     </button>
     <div
-      class="hidden w-full md:block md:w-auto"
+      class="absolute -right-full w-full md:block md:w-auto"
       id="navbar-default"
     >
       <ul
-        class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
+        class="nav-text flex flex-col w-2/3 h-screen absolute right-0 ease-in-out md:flex-row md:space-x-8 md:mt-0"
       >
         <li>
           <a
             href="/"
-            class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500"
+            class="block py-2 pl-3 pr-4 md:bg-transparent md:p-0"
             aria-current="page">Home</a
           >
         </li>
         <li>
           <a
             href="/destination/moon"
-            class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
+            class="block py-2 pl-3 pr-4 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
             >Desination</a
           >
         </li>
@@ -64,7 +64,7 @@
         </li>
         <li>
           <a
-            href="#"
+            href="/technology/launch-vehicle"
             class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
             >Technology</a
           >
@@ -73,3 +73,10 @@
     </div>
   </div>
 </nav>
+
+<style>
+  ul {
+    background-color: rgb(255 255 255 / 0.2);
+    backdrop-filter: blur(0.4rem);
+  }
+</style>
