--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,8 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout title="Space Tourism">
   <main>
-    <h2 class="title-1">inicio</h2>
+    <h2 class="heading-5">
+      SO, YOU WANT TO TRAVEL TO SPACE
+    </h2>
   </main>
 </Layout>
