--- a/src/components/CrewNav.astro
+++ b/src/components/CrewNav.astro
@@ -1,15 +1,26 @@
 ---
-
+const links = [
+  "hurley",
+  "shuttleworth",
+  "glover",
+  "ansari",
+];
+const { idParams } = Astro.props;
 ---
 
 <div class="flex gap-4 mt-4">
-  <a href="hurley" class="w-3 h-3 rounded-full bg-secondary"
-  ></a>
-  <a
-    href="shuttleworth"
-    class="w-3 h-3 rounded-full bg-secondary"></a>
-  <a href="glover" class="w-3 h-3 rounded-full bg-secondary"
-  ></a>
-  <a href="ansari" class="w-3 h-3 rounded-full bg-secondary"
-  ></a>
+  {
+    links.map((link) => (
+      <a
+        href={link}
+        class:list={[
+          "w-3 h-3 rounded-full",
+          {
+            "bg-secondary": idParams === link,
+            "bg-gray-600": idParams !== link,
+          },
+        ]}
+      />
+    ))
+  }
 </div>
