--- a/src/components/DestinationNav.astro
+++ b/src/components/DestinationNav.astro
@@ -1,10 +1,26 @@
 ---
-
+const links = ["moon", "mars", "europa", "titan"];
+const { idParams } = Astro.props;
 ---
 
-<ul class="text-secondary flex gap-4">
-  <li><a href="/destination/moon">MOON</a></li>
-  <li><a href="/destination/mars">MARS</a></li>
-  <li><a href="/destination/europa">EUROPA</a></li>
-  <li><a href="/destination/titan">TITAN</a></li>
-</ul>
+<nav>
+  <ul class="flex gap-4">
+    {
+      links.map((link) => (
+        <li>
+          <a
+            href={link}
+            class:list={[
+              "nav-destination",
+              {
+                "border-b-2 text-white ": idParams === link,
+              },
+            ]}
+          >
+            {link.toUpperCase()}
+          </a>
+        </li>
+      ))
+    }
+  </ul>
+</nav>
