--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,26 +32,26 @@ const { title } = Astro.props;
       src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.0/flowbite.min.js"
     ></script>
     <style is:global>
-      body {
+      /* body {
         background-image: url("https://res.cloudinary.com/jurbina/image/upload/v1694194537/space-tourism/home/background-home-mobile_x6xror.jpg");
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
-      }
+      } */
 
       /* SM */
-      @media (min-width: 768px) {
+      /* @media (min-width: 768px) {
         body {
           background-image: url("https://res.cloudinary.com/jurbina/image/upload/v1694194537/space-tourism/home/background-home-tablet_qq90h5.jpg");
         }
-      }
+      } */
 
       /* LG */
-      @media (min-width: 1024px) {
+      /* @media (min-width: 1024px) {
         body {
           background-image: url("https://res.cloudinary.com/jurbina/image/upload/v1694194537/space-tourism/home/background-home-desktop_wxbxtl.jpg");
         }
-      }
+      } */
       .heading-1 {
         @apply font-bellefair text-9xl text-secondary;
       }
@@ -93,7 +93,7 @@ const { title } = Astro.props;
       }
 
       .screen {
-        @apply w-screen h-full flex items-center justify-center;
+        @apply w-screen h-full flex items-center justify-center mdd:h-screen;
       }
     </style>
   </body>
