technology responsive styles check

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -73,11 +73,11 @@ const { title } = Astro.props;
       }
 
       .subheading-1 {
-        @apply font-bellefair text-2xl text-secondary;
+        @apply font-bellefair text-2xl text-secondary md:text-3xl;
       }
 
       .subheading-2 {
-        @apply font-barlow text-sm text-highlight tracking-wide;
+        @apply font-barlow text-sm text-highlight tracking-wide md:text-xl;
       }
 
       .nav-destination {
