--- a/src/components/CrewCard.astro
+++ b/src/components/CrewCard.astro
@@ -8,28 +8,19 @@ const employee = crew[id];
 
 {
   (
-    <section>
-      <div class="max-w-sm">
-        <div class="p-5">
-          <p
-            class="mb-3
-          font-normal
-          text-secondary"
-          >
-            {employee.role}
-          </p>
-          <h5 class="title-1">{employee.name}</h5>
-          <p
-            class="mb-3
-          font-normal
-          text-secondary"
-          >
-            {employee.description}
-          </p>
+    <section class="screen">
+      <div class="w-full h-full max-w-lg grid grid-rows-[auto_50px_auto] place-items-center md:h-screen md:grid-rows-[1fr_50px_auto] mdd:h-3/4 mdd:grid-rows-[1fr_2fr] mdd:grid-cols-2 mdd:max-w-7xl">
+        <div class="p-5 text-center row-start-3 flex flex-col items-center justify-center md:row-start-1 mdd:col-start-2 mdd:row-start-2 mdd:self-start">
+          <p class="subheading-2 ">{employee.role}</p>
+          <h5 class="subheading-1">{employee.name}</h5>
+          <p class="body-text">{employee.description}</p>
         </div>
-        <CrewNav idParams={id} />
+        <CrewNav
+          idParams={id}
+          tailwindClass="mdd:self-end mdd:pb-4"
+        />
         <img
-          class="rounded-t-lg"
+          class="row-start-1 w-3/4 h-3/4 object-contain md:row-start-3 md:full md:h-full mdd:row-start-1 mdd:row-span-2 mdd:self-center"
           src={employee.img}
           alt=""
         />
