--- a/src/components/CrewNav.astro
+++ b/src/components/CrewNav.astro
@@ -5,16 +5,17 @@ const links = [
   "glover",
   "ansari",
 ];
-const { idParams } = Astro.props;
+const { idParams, tailwindClass } = Astro.props;
 ---
 
-<div class="flex gap-4 mt-4">
+<div class={`flex gap-4 ${tailwindClass}`}>
   {
     links.map((link) => (
       <a
         href={link}
         class:list={[
-          "w-3 h-3 rounded-full",
+          `w-3 h-3 rounded-full `,
+
           {
             "bg-secondary": idParams === link,
             "bg-gray-600": idParams !== link,
