--- a/src/components/DestinationCard.astro
+++ b/src/components/DestinationCard.astro
@@ -9,7 +9,10 @@ const destination = destinations[id];
 {
   (
     <section class="screen">
-      <div class="w-full h-full max-w-lg grid grid-rows-2 place-items-center gap-4 mdd:grid-cols-2 mdd:grid-rows-none mdd:max-w-7xl">
+      <h2 class="heading-5 mt-16 mb-2 mdd:m-0 mdd:absolute mdd:left-8 mdd:top-20">
+        01 PICK YOUR DESTINATION
+      </h2>
+      <div class="w-full h-full mdd:mt-12 max-w-lg grid grid-rows-2 place-items-center gap-4 mdd:grid-cols-2 mdd:grid-rows-none mdd:h-2/3  mdd:max-w-7xl">
         <img
           class="w-4/5 h-4/5 object-contain"
           src={destination.img}
