--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,9 +3,51 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Space Tourism">
-  <main>
-    <h2 class="heading-5">
-      SO, YOU WANT TO TRAVEL TO SPACE
-    </h2>
+  <main
+    class="w-screen h-screen min-w-mob flex flex-col items-center justify-evenly md:flex-row"
+  >
+    <div
+      class="flex flex-col gap-12 text-center md:w-1/2 md:gap-4 md:max-w-5xl"
+    >
+      <h2 class="heading-5 px-4">
+        SO, YOU WANT TO TRAVEL TO SPACE
+      </h2>
+      <h1 class="heading-1">SPACE</h1>
+      <p class="body-text px-8">
+        Let’s face it; if you want to go to space, you might
+        as well genuinely go to outer space and not hover
+        kind of on the edge of it. Well sit back, and relax
+        because we’ll give you a truly out of this world
+        experience!
+      </p>
+    </div>
+    <a
+      href="/destination/moon"
+      class="bg-secondary w-32 h-32 rounded-full flex items-center justify-center font-bellefair text-2xl hover:shadow-2xl hover:shadow-highlight ease-in-out duration-200"
+      >EXPLORE</a
+    >
   </main>
 </Layout>
+
+<style>
+  main {
+    background-image: url("https://res.cloudinary.com/jurbina/image/upload/v1694194537/space-tourism/home/background-home-mobile_x6xror.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+
+  /* MD */
+  @media (min-width: 768px) {
+    main {
+      background-image: url("https://res.cloudinary.com/jurbina/image/upload/v1694194537/space-tourism/home/background-home-tablet_qq90h5.jpg");
+    }
+  }
+
+  /* MDD */
+  @media (min-width: 900px) {
+    main {
+      background-image: url("https://res.cloudinary.com/jurbina/image/upload/v1694194537/space-tourism/home/background-home-desktop_wxbxtl.jpg");
+    }
+  }
+</style>
